[gd_scene load_steps=7 format=2]

[ext_resource path="res://opensans_extrabold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://StartMenuFonts.tres" type="DynamicFont" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/MainScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="MainScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
rect_min_size = Vector2( 576, 1024 )
color = Color( 0.278431, 0.380392, 0.843137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeScreen" type="Node2D" parent="."]
position = Vector2( 0, 566 )

[node name="VBoxContainer" type="VBoxContainer" parent="HomeScreen"]
margin_top = -66.0
margin_right = 572.0
margin_bottom = 246.0
theme = ExtResource( 3 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="HomeScreen/VBoxContainer"]
margin_right = 572.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Button" parent="HomeScreen/VBoxContainer"]
margin_top = 79.0
margin_right = 572.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 2 )
text = "Leaderboard"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Button" parent="HomeScreen/VBoxContainer"]
margin_top = 158.0
margin_right = 572.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 2 )
text = "Setting"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="HomeScreen/VBoxContainer"]
margin_top = 237.0
margin_right = 572.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HomeScreen"]
margin_top = -566.0
margin_right = 576.0
margin_bottom = -266.0
custom_fonts/font = SubResource( 1 )
text = "BaBlah
Quiz!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingScreen" type="Node2D" parent="."]
visible = false

[node name="DifficultyOption" type="VBoxContainer" parent="SettingScreen"]
margin_left = 88.0
margin_top = 200.0
margin_right = 488.0
margin_bottom = 600.0
theme = ExtResource( 3 )
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingScreen/DifficultyOption"]
margin_right = 400.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "Difficulty"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="Label" parent="SettingScreen/DifficultyOption"]
margin_top = 89.0
margin_right = 400.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 2 )
text = "(Easy)"
align = 1

[node name="Button" type="Button" parent="SettingScreen/DifficultyOption"]
margin_top = 157.0
margin_right = 400.0
margin_bottom = 206.0
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="SettingScreen/DifficultyOption"]
margin_top = 246.0
margin_right = 400.0
margin_bottom = 295.0
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="SettingScreen/DifficultyOption"]
margin_top = 335.0
margin_right = 400.0
margin_bottom = 384.0
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HomeScreen/VBoxContainer/Start" to="." method="onStart"]
[connection signal="pressed" from="HomeScreen/VBoxContainer/Setting" to="." method="onSetting"]
[connection signal="pressed" from="SettingScreen/DifficultyOption/Button" to="." method="onDifficultySelect" binds= [ "Easy" ]]
[connection signal="pressed" from="SettingScreen/DifficultyOption/Button2" to="." method="onDifficultySelect" binds= [ "Normal" ]]
[connection signal="pressed" from="SettingScreen/DifficultyOption/Button3" to="." method="onDifficultySelect" binds= [ "Hard" ]]
